# RK3568_FaceApp

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_EN.md
assets/model/: retinaface_320.rknn
src/: main.cpp
src/algo/: MobileFaceNet.cpp  MobileFaceNet.h  RetinaFace.cpp  RetinaFace.h
src/db/: FaceDatabase.cpp  FaceDatabase.h
src/device/: CameraManager.cpp  CameraManager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
